[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Exh"
dynamic = ["version"]
description = "Computes innocent exclusion/inclusions exhaustivity"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "Keny Chatain", email = "kchatain@mit.edu" },
]
dependencies = [
  "numpy",
  "IPython",
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]

[project.urls]
Homepage = "https://github.com/KenyC/Exh"
Repository = "https://github.com/KenyC/Exh"

[tool.setuptools]
zip-safe = true

[tool.setuptools.dynamic]
version = { attr = "exh.__version__" }

[tool.setuptools.packages.find]
include = ["exh*"]
namespaces = true
